[package]
name = "kami"
version = "0.1.0"
authors = ["Justin Stanley"]
edition = "2018"

[dependencies]
chess = "3.2.0"
clap = "2.33.3"
config = "0.11.0"
ctrlc = "3.1.9"
dirs = "3.0.1"
fs_extra = "1.2.0"
log = "0.4"
num_cpus = "1.13.0"
pretty_env_logger = "0.3"
rand = "0.6.5"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tch = "0.4.1"
tempfile = "3.2.0"