[package]
name = "kami"
version = "0.1.0"
authors = ["Justin Stanley"]
edition = "2018"

[dependencies]
chess = "3.2.0"
crossterm = "0.19.0"
ctrlc = "3.1.9"
dirs = "3.0.1"
fs_extra = "1.2.0"
num_cpus = "1.13.0"
rand = "0.6.5"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tch = { version = "0.4.1", optional = true }
tui = { version = "0.15.0", features = ["crossterm"], default-features = false }
tempfile = "3.2.0"

[features]
default = ["tch"]