add_executable(bench bench.cpp)
add_executable(mcts mcts.cpp)
add_executable(nn nn.cpp)
add_executable(nncuda nncuda.cpp)
add_executable(nndisk nndisk.cpp)
add_executable(nntrain nntrain.cpp)
add_executable(selfplay selfplay.cpp)
add_executable(play play.cpp)
add_executable(encoding encoding.cpp)

target_link_libraries(bench kamicommon)
target_link_libraries(encoding kamicommon)
target_link_libraries(mcts kamicommon)
target_link_libraries(nn kamicommon)
target_link_libraries(nncuda kamicommon)
target_link_libraries(nndisk kamicommon)
target_link_libraries(nntrain kamicommon)
target_link_libraries(selfplay kamicommon)
target_link_libraries(play kamicommon)
